--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,11 +2,11 @@ server:
   port: ${PORT:10000}
 spring:
   application:
-    name: easybuy-itemcat-service
+    name: regenesis-crawler-service
   datasource:
     url: jdbc:mysql://localhost:3306/regenesis?serverTimezone=UTC
     username: root
-    password: 123456
+    password: ${PASSWORD:123456}
     driver-class-name: com.mysql.cj.jdbc.Driver
     druid:
       initial-size: 1
@@ -20,3 +20,6 @@ spring:
 mybatis-plus:
   mapper-locations: classpath:mappers/*.xml
   type-aliases-package: top.stelaino.rg.entity
+logging:
+  file: regenesis.log
+  path: ${LOGPATH:log}
